--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.4",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "react": "17.0.1",
+    "react-feather": "luiz-doreto/react-feather",
     "react-native": "0.64.2",
+    "react-native-date-picker": "^3.4.3",
     "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "^3.5.0"
+    "react-native-screens": "^3.5.0",
+    "react-native-svg": "^12.1.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -26,6 +31,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
