--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
+    "react-native-masked-text": "^1.13.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
