--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react-native": "0.64.2",
     "react-native-date-picker": "^3.4.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
-    "react-native-masked-text": "^1.13.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
